--- a/TheraJournal/ClientApp/src/index.css
+++ b/TheraJournal/ClientApp/src/index.css
@@ -1,4 +1,10 @@
 :root {
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
+
+}
+/*:root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,3 +72,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
